<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:paddingTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/map_pin_in_map"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/place_item_icon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:paddingBottom="80dp"
        android:paddingRight="20dp"
        android:layout_centerInParent="true"
        android:src="@drawable/lamp"
        />

    <LinearLayout
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:gravity="top"
           android:layout_height="match_parent">
    <TextView
        android:paddingTop="10dp"
        android:id="@+id/place_item_host"
        android:text="@string/host"
        android:paddingLeft="10dp"
        android:textSize="@dimen/text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:paddingLeft="10dp"
        android:paddingBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/place_item_name"
            android:text="@string/name"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/place_item_description"
            android:text="@string/description"
            android:textSize="@dimen/text_normal"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>