<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="420dp"
    android:background="@color/colorDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_resource_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/add_resource"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/flag_map_marker"
        android:drawablePadding="3dp"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/text_big"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/dialog_resource_edit_icon"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/colorDark"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/dialog_resource_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
        android:layout_gravity="center"
        android:hint="@string/edit_environment_name_hint"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/dialog_resource_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/edit_environment_description_hint"
        android:layout_margin="10dp"/>

    <fragment
        android:name="aiec.br.ehc.parameter.TurnOnOffFragment"
        android:id="@+id/frame_parameter"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </fragment>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_btn_yes"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:text="@string/save"
            android:layout_gravity="left|bottom"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/dialog_btn_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="right|bottom"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>